fixed scroll on mobile

--- a/client/styles/layout/groups-modal.scss
+++ b/client/styles/layout/groups-modal.scss
@@ -11,7 +11,7 @@
         }
     }
     &__content-wrapper {
-        overflow-x: hidden;
+        overflow: hidden;
     }
     &__block {
         padding-left: 20px;
